# CrossRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
BB/: CMakeLists.txt
BB/Framework/: CMakeLists.txt
BB/Framework/include/: BBGlobal.h  BBMain.h  BBMemory.h  BBThreadScheduler.hpp  BBjson.hpp  Common.h  Framework.h  Math.inl
BB/Framework/include/Allocators/: AllocTypes.h  Allocators.h  BackingAllocator.h  MemoryArena.h  RingAllocator.h  TemporaryAllocator.h
BB/Framework/include/Allocators/BackingAllocator/: BackingAllocator.h
BB/Framework/include/OS/: HID.h  HID.inl  OSDevice.h  Program.h
BB/Framework/include/Storage/: Array.h  BBString.h  FixedArray.h  GrowPool.h  Hashmap.h  Pool.h  Slotmap.h
BB/Framework/include/Utils/: Hash.h  Logger.h  Slice.h  Utils.h
BB/Framework/src/: BBMain.cpp  BBMemory.cpp  BBThreadScheduler.cpp  BBjson.cpp  Framework.cpp
BB/Framework/src/Allocators/: Allocators.cpp  BackingAllocator.cpp  MemoryArena.cpp  RingAllocator.cpp  TemporaryAllocator.cpp
BB/Framework/src/Allocators/BackingAllocator/: BackingAllocator_LINUX.cpp  BackingAllocator_WIN.cpp
BB/Framework/src/OS/: OSDevice_LINUX.cpp  OSDevice_WIN.cpp  Program_WIN.cpp
BB/Framework/src/Utils/: Logger.cpp  Utils.cpp
BB/UnitTests/: CMakeLists.txt  Main.cpp  TestValues.h
BB/UnitTests/Framework/: Allocators_UTEST.h  Array_UTEST.h  BBjson_UTEST.hpp  FileReadWrite_UTEST.h  Hashmap_UTEST.h  MemoryArena_UTEST.h  MemoryOperations_UTEST.h  Pool_UTEST.h  Slice_UTEST.h  Slotmap_UTEST.h  String_UTEST.h
Libs/: CMakeLists.txt
Libs/AgilitySDK/include/d3dx12/: d3dx12.h  d3dx12_property_format_table.h
Libs/imgui/: CMakeLists.txt  imgui.h
Libs/imgui/backends/: imgui_impl_win32.cpp
Renderer/: CMakeLists.txt
Renderer/DirectX12/: CMakeLists.txt
Renderer/DirectX12/include/: DX12Backend.h  DX12Common.h  DX12HelperTypes.h
Renderer/DirectX12/src/: DX12Backend.cpp  DX12Common.cpp  DX12HelperTypes.cpp
Renderer/Imgui/: imgui_impl_CrossRenderer.cpp  imgui_impl_CrossRenderer.h
Renderer/Vulkan/: CMakeLists.txt
Renderer/Vulkan/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Renderer/Vulkan/include/: VulkanBackend.h  VulkanCommon.h  VulkanHelperTypes.h
Renderer/Vulkan/src/: VulkanBackend.cpp  VulkanCommon.cpp  VulkanHelperTypes.cpp
Renderer/include/: Editor.h  FrameGraph.h  imgui_impl_CrossRenderer.h
Renderer/include/Backend/: RenderBackend.h  RenderBackendCommon.h  RenderBackendCommon.inl  RenderResourceTracker.h  ShaderCompiler.h  backendCommands.h
Renderer/include/Backend/DX12/: DX12Backend.h  DX12Common.h
Renderer/include/Backend/VK/: VulkanBackend.h  VulkanCommon.h  VulkanInitializers.h
Renderer/include/Frontend/: AssetLoader.hpp  Camera.h  LightSystem.h  Materials.h  ModelLoader.h  Particle.hpp  RenderBuffers.h  RenderFrontend.h  RenderFrontendCommon.h  Transform.h
Renderer/include/Graph/: FrameGraph.h  FrameGraph.hpp  FrameGraphCommon.hpp  SceneGraph.hpp
Renderer/src/: Editor.cpp  FrameGraph.cpp  imgui_impl_CrossRenderer.cpp  main.cpp
Renderer/src/Backend/: RenderBackend.cpp  RenderResourceTracker.cpp  ShaderCompiler.cpp
Renderer/src/Backend/DX12/: DX12Backend.cpp  DX12Common.cpp
Renderer/src/Backend/VK/: VulkanBackend.cpp  VulkanCommon.cpp  VulkanDeviceBuffer.cpp
Renderer/src/Frontend/: AssetLoader.cpp  Camera.cpp  LightSystem.cpp  Materials.cpp  ModelLoader.cpp  Particle.cpp  RenderBuffers.cpp  RenderFrontend.cpp  Transform.cpp
Renderer/src/Graph/: FrameGraph.cpp  SceneGraph.cpp
Resources/: CMakeLists.txt  LICENSE_Sponza.md
Resources/Json/: test_scene.json
Resources/Models/: Box.gltf
Resources/Shaders/GLSLShaders/: Debug.frag  Debug.vert  DebugVert.glsl  compileDebug.bat  debugVert.spv
Resources/Shaders/HLSLShaders/: Common.hlsl  DebugFrag.hlsl  DebugVert.hlsl  ImguiFrag.hlsl  ImguiVert.hlsl
Resources/Shaders/Vulkan/: debugVert.spv
Resources/Textures/: VulkanCommon.cpp
